# cmake-examples

./: .gitignore
basic/hello-cmake/: CMakeLists.txt  main.cpp
basic/hello-with-haders/: CMakeLists.txt
basic/hello-with-haders/src/: hello.cpp
basic/installing/: CMakeLists.txt
basic/installing/include/: hello.h
basic/installing/src/: hello.cpp
basic/shared-library/: CMakeLists.txt
basic/shared-library/src/: hello.cpp  main.cpp
basic/static-library/: CMakeLists.txt
basic/static-library/src/: hello.cpp
